@@ -321,6 +321,36 @@ webui.licence_bundle.show = false
 #
 # webui.itemdisplay.thesis.collections = 123456789/24, 123456789/35
 
+# Customise the DC fields to use in the item listing page.  Elements will be
+# displayed left to right in the order that they are specified here.
+#
+# The form is <schema prefix>.<element>[.<qualifier>|.*][(date)], ...
+#
+# Although not a requirement, it would make sense to include among the listed
+# fields at least the date and title fields as specified by the
+# webui.browse.index.* configuration options below.
+#
+# webui.itemlist.columns = dc.date.issued(date), dc.title, dc.contributor.*
+
+# Set the bindings for the DC browse fields.  These determine which metadata
+# elements are used for browse by date, author, title and subject.  In addition, 
+# these settings will be used to determine the behaviour of the fields on the
+# listing page: dates will be formatted as required, and titles will be links
+# to item metadata pages.  At least the date and title fields ought to be
+# specified in the webui.itemlist.columns parameters.
+#
+# The form is <schema prefix>.<element>[.<qualifier>|.*], ...
+#
+# NOTE: if you make changes to this configuration to an existing DSpace
+# installation you must re-index the system using: 
+#
+# % [dspace]/bin/index-all
+#
+# webui.browse.index.date = dc.date.issued
+# webui.browse.index.author = dc.contributor.*
+# webui.browse.index.title = dc.title
+# webui.browse.index.subject = dc.subject.*
+
 
 ##### SFX Server #####
 
