@@ -1,3 +1,14 @@
+itemlist.dc.date.issued = Issue Date
+itemlist.dc.title = Title
+itemlist.dc.contributor.* = Author(s)
+itemlist.dc.contributor.author = Author(s)
+itemlist.dc.creator = Author(s)
+itemlist.dc.date.defense = Defense Date
+itemlist.dc.type.degree = Degree
+itemlist.dc.type.course = Course
+itemlist.dc.type.* = Type
+itemlist.dc.type = Type
+
 metadata.dc.title = Title
 metadata.dc.title.alternative = Other Titles
 metadata.dc.contributor.* = Authors
